<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#673AB7"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/details_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/details_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/details_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_timestamp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/details_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:text="@string/details_description" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>